--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DISCORD_BOT_TOKEN=MTM3MTMxNjQzNjk2OTk4NDA1MA.GihQNl.6k-p5-if3VcR7rQqf0UQjHqxNAmgzUSq4O4LTU
-DISCORD_CLIENT_ID=1371316436969984050
+DISCORD_BOT_TOKEN=MTI4NzUyNzY2NTU5ODcyNjIxOA.Go_ISC.gG2RAnrGjZFLZ1r2Oe5CAP_Qg3H-T6f9b5vqQo
+DISCORD_CLIENT_ID=1287527665598726218
 
 WEB_SERVER_URL=http://localhost:3000
 PORT=3000
